# Rectangle.For.Windows

./: .gitignore  DEVELOPMENT.md  ROADMAP.md  WINUI3_MIGRATION_PLAN.md
Rectangle/: AppDelegate.swift  Defaults.swift
Rectangle.Windows/: README.md  Rectangle.Windows.sln  create-icon.ps1
Rectangle.Windows/src/Rectangle.Windows.WinUI.Rust/: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
Rectangle.Windows/src/Rectangle.Windows.WinUI.Rust/src/: lib.rs  main.rs
Rectangle.Windows/src/Rectangle.Windows.WinUI.Rust/src/calculators/: corner.rs  display.rs  eighth.rs  extended.rs  fourth.rs  half.rs  misc.rs  mod.rs  move.rs  ninth.rs  repeated_executions.rs  sixth.rs  third.rs  todo.rs
Rectangle.Windows/src/Rectangle.Windows.WinUI.Rust/src/core/: action.rs  calculator.rs  calculator_factory.rs  drag_state.rs  history.rs  mod.rs  rect.rs
Rectangle.Windows/src/Rectangle.Windows.WinUI.Rust/src/services/: cascade_all_manager.rs  config.rs  hotkey.rs  logger.rs  mod.rs  mouse_hook.rs  reverse_all_manager.rs  screen.rs  snapping_manager.rs  tile_all_manager.rs  todo_manager.rs  tray.rs  win32.rs  window_enumerator.rs  window_manager.rs
Rectangle.Windows/src/Rectangle.Windows.WinUI.Rust/src/ui/: app.rs  general_settings_page.rs  main_window.rs  mod.rs  shortcut_editor.rs  shortcuts_page.rs  snap_areas_page.rs  tray_icon.rs
Rectangle.Windows/src/Rectangle.Windows.WinUI.Rust/src/ui/xaml/: GeneralSettingsPage.xaml  MainWindow.xaml  ShortcutEditor.xaml  ShortcutsPage.xaml  SnapAreasPage.xaml
Rectangle.xcodeproj/: project.pbxproj
docs/: 01-overview.md  02-window-actions.md  (+14 more)
(+334 files in other folders)
