[package]
name = "rectangle-windows-winui-rust"
version = "0.1.0"
edition = "2024"
description = "Rectangle 窗口管理工具 - Rust WinUI 版"

[[bin]]
name = "Rectangle.Windows.WinUI.Rust"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
anyhow = "1.0"
log = "0.4"
simplelog = "0.12"
dirs = "5.0"
